fix stretched profile picture

--- a/app/assets/stylesheets/users/profile_pic_panel.scss
+++ b/app/assets/stylesheets/users/profile_pic_panel.scss
@@ -1,9 +1,10 @@
 .profile-pic {
-  position: relative;
   width: 200px;
   height: 200px;
   overflow: hidden;
   border-radius: 50%;
+  background-size: cover;
+  background-position: center center;
 }
 
 .btn-round-lg {
